2009-07-17  Kenichi Handa  <handa@m17n.org>

	* case-table.el (describe-buffer-case-table): Fix for the case
	that KEY is a cons.

2009-07-16  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* term/ns-win.el (ns-set-alpha): Don't declare.
	(ns-set-background-alpha): Remove function.

2009-07-15  Kenichi Handa  <handa@m17n.org>

	* international/mule-cmds.el (set-language-environment-charset):
	If coding-system-charset-list returns `iso-2022' or `emacs-mule',
	ignore them.

	* language/misc-lang.el ("IPA"): Change coding systems to utf-8.
	Delete unibyte-display.

2009-07-14  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (line-move): Call line-move-1 if lines are truncated.

2009-07-14  Glenn Morris  <rgm@gnu.org>

	* emacs-lisp/edebug.el (edebug-setup-hook, edebug-all-forms)
	(edebug-eval-macro-args, edebug-save-displayed-buffer-points)
	(edebug-print-length, edebug-print-level, edebug-print-circle)
	(edebug-sit-for-seconds, edebug-view-outside)
	(edebug-bounce-point, edebug-set-global-break-condition)
	(edebug-Go-nonstop-mode, edebug-trace-mode)
	(edebug-Trace-fast-mode, edebug-continue-mode)
	(edebug-Continue-fast-mode, edebug-forward-sexp, edebug-help)
	(edebug-visit-eval-list): Doc fixes.

	* subr.el (def-edebug-spec): Doc fix.

2009-07-14  Kenichi Handa  <handa@m17n.org>

	* international/characters.el: Fix setting of category ?C.

2009-07-12  Guanpeng Xu  <herberteuler@hotmail.com>

	* pcomplete.el (pcomplete-comint-setup): Check for
	shell-dynamic-complete-filename too.

2009-07-11  Kenichi Handa  <handa@m17n.org>

	* international/mule-diag.el (describe-character-set): Don't show
	width.

2009-07-10  Eli Zaretskii  <eliz@gnu.org>

	* cus-edit.el (customize-changed-options-previous-release): Bump
	value to 22.1.  (Bug#3804)

2009-07-08  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-set-file-uid-gid): Handle the case the
	remote user is root, on the local host.
	(tramp-local-host-p): Either the local user or the remote user